# Particle-Sim

./: CMakeLists.txt  readme.md
inc/: main.h  particles.h  render.h
src/: main.c  particles.c  render.c
